@@ -5,6 +5,7 @@
     "minecraft:golden_chestplate",
     "minecraft:diamond_chestplate",
     "minecraft:chainmail_chestplate",
-    "minecraft:netherite_chestplate"
+    "minecraft:netherite_chestplate",
+    "minecraft:elytra"
   ]
 }
